<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_margin="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    tools:context="na.brexitsoundboard.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonBoris00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                app:srcCompat="@drawable/boris00" />

            <ImageButton
                android:id="@+id/imageButtonBoris01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                android:visibility="gone"
                app:srcCompat="@drawable/boris01" />

            <ImageButton
                android:id="@+id/imageButtonBoris02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                android:visibility="gone"
                app:srcCompat="@drawable/boris02" />

            <ImageButton
                android:id="@+id/imageButtonBoris03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                android:visibility="gone"
                app:srcCompat="@drawable/boris03" />

            <ImageButton
                android:id="@+id/imageButtonBoris04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                android:visibility="gone"
                app:srcCompat="@drawable/boris04" />

            <ImageButton
                android:id="@+id/imageButtonLiam00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                app:srcCompat="@drawable/liam00" />

            <ImageButton
                android:id="@+id/imageButtonLiam01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                android:visibility="gone"
                app:srcCompat="@drawable/liam01" />

            <ImageButton
                android:id="@+id/imageButtonLiam02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                android:visibility="gone"
                app:srcCompat="@drawable/liam02" />

            <ImageButton
                android:id="@+id/imageButtonLiam03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                android:visibility="gone"
                app:srcCompat="@drawable/liam03" />

            <ImageButton
                android:id="@+id/imageButtonDavid00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                app:srcCompat="@drawable/david00" />

            <ImageButton
                android:id="@+id/imageButtonDavid01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                android:visibility="gone"
                app:srcCompat="@drawable/david01" />

            <ImageButton
                android:id="@+id/imageButtonDavid02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                android:visibility="gone"
                app:srcCompat="@drawable/david02" />

            <ImageButton
                android:id="@+id/imageButtonDavid03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                android:visibility="gone"
                app:srcCompat="@drawable/david03" />

            <ImageButton
                android:id="@+id/imageButtonTheresa00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                app:srcCompat="@drawable/theresa00" />

            <ImageButton
                android:id="@+id/imageButtonTheresa01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                android:visibility="gone"
                app:srcCompat="@drawable/theresa01" />

            <ImageButton
                android:id="@+id/imageButtonTheresa02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                android:visibility="gone"
                app:srcCompat="@drawable/theresa02" />

            <ImageButton
                android:id="@+id/imageButtonTheresa03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                android:visibility="gone"
                app:srcCompat="@drawable/theresa03" />

            <ImageButton
                android:id="@+id/imageButtonTheresa04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                android:visibility="gone"
                app:srcCompat="@drawable/theresa04" />

            <ImageButton
                android:id="@+id/imageButtonSuggestionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_suggestion_box"
                app:srcCompat="@drawable/suggestionbox" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
