<resources>
    <string name="app_name">Brexit Soundboard</string>

    <string name="button_boris">Alexander Boris de Pfeffel Johnson</string>
    <string name="button_liam">Sir Liam Fox</string>
    <string name="button_david">Sir David Davis</string>
    <string name="button_theresa">The Baroness May of Maidenhead</string>
    <string name="button_jacob">Sir Jacob William Rees-Mogg</string>

    <string name="button_boris_350MillionPoundsAWeek">350 Million Pounds A Week</string>
    <string name="button_boris_AllYourOptionsAreGood">All Your Options Are Good</string>
    <string name="button_boris_CostOfGettingOutVirtuallyNil">Cost Of Getting Out Virtually Nil</string>
    <string name="button_boris_HiggledyPiggledyNations">Higgledy-piggledy Nations</string>
    <string name="button_boris_TigerInTheTank">Tiger In The Tank</string>
    <string name="button_boris_VindicatedByHistory">Vindicated By History</string>
    <string name="button_boris_WeExportTvAerials">We Export Tv Aerials</string>
...
