...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonBoris350MillionPoundsAWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_boris_350MillionPoundsAWeek"
                android:textColor="@color/colorRed" />
...
